<resources>
    <string name="app_name">Team1</string>
    <string name="team_1">TEAM 1</string>
    <string name="web_service">Web Service</string>
    <string name="filter_imageView">Filter image view</string>
    <string name="search_tv_show">Search TV Show</string>
    <string name="year_new_to_old">Year: New to Old</string>
    <string name="search_magnifying_glass_button">Search magnifying glass button</string>
    <string name="tv_show_name">TV Show Name</string>
    <string name="poster_image">Poster Image</string>
    <string name="tv_show_year">TV Show Year</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="year">Year</string>
    <string name="about">About</string>
    <string name="stick_it">Stick It</string>
    <string name="team_1_ONE">TEAM 1</string>
    <string name="team_members_ngino_romanello_nmariah_maynard_nmitchell_neides_nshriya_dhaundiyal_ntae_hyeon_lee">Gino Romanello\n\nMariah Maynard\n\nMitchell Neides\n\nShriya Dhaundiyal\n\nTae Hyeon Lee</string>
    <string name="dogs">Dogs</string>
    <string name="food">Food</string>
    <string name="race_car">Race Car</string>
    <string name="sunset">Sunset</string>
    <string name="user_sent">User Sent</string>
    <string name="image_sent">Image Sent</string>
    <string name="sticker_ledger">Sticker Ledger</string>
    <string name="sent_count_0">Sent Count: 0</string>
    <string name="conversations">Conversations</string>
    <string name="username">username</string>
    <string name="new_chat">New_chat</string>
    <string name="enter_user_you_wish_to_chat_with">Enter User You Wish To Chat With</string>
    <string name="enter_user_you_wish_to_chat_with1">Enter User You Wish To Chat With</string>
    <string name="enter_user_name_to_start_chat">Enter user to start chat</string>
    <string name="check_sticker_history">Check Sticker History</string>

</resources>